<resources>
    <string name="app_name">Agenda</string>

    <string name="msg_default_error">Unexpected Error</string>
    <string name="msg_success">Success</string>
    <string name="msg_error">Error</string>
    <string name="msg_error_password_min_lenght">The password must contain at least 6 characters</string>
    <string name="msg_error_email_format">Invalid Email Format</string>
    <string name="msg_error_getting_web_service_response">Error when trying to get a response from the server</string>
    <string name="msg_username_password_incorrect">Wrong Credentials</string>
    <string name="msg_confirm_title">Please Confirm</string>
    <string name="msg_confirm_logout">Are you sure you want to logout?</string>
    <string name="msg_task_accomplished">accomplished!</string>
    <string name="msg_error_email_already_exists">This Email Already Exists</string>
    <string name="msg_error_invalid_fields">Invalid Fields</string>
    <string name="msg_error_timeout">Time Out</string>
    <string name="msg_error_removing_task">Error when trying to finish the task</string>
    <string name="msg_error_could_not_fetch_from_server">Could not fetch data from the server</string>

    <string name="hint_name">Full Name</string>

    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_phone">Phone</string>
    <string name="str_email">Email</string>
    <string name="str_login">Login</string>
    <string name="str_register">Register</string>
    <string name="str_settings">Settings</string>
    <string name="str_logout">Logout</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_undo">UNDO</string>
    <string name="str_task">Task</string>
    <string name="str_event">Event</string>
    <string name="str_contact">Contact</string>
    <string name="str_title">Title</string>
    <string name="str_new_task">New Task</string>
    <string name="str_new_event">New Event</string>
    <string name="str_new_contact">New Contact</string>
    <string name="str_description">Description</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_open_source">Open Source</string>
    <string name="str_today">Today</string>
    <string name="str_none">None</string>
    <string name="str_parent_task">Parent Task</string>
    <string name="str_or">OR</string>
    <string name="str_regular">Regular</string>
    <string name="str_save">Save</string>
    <string name="hello_blank_fragment">Ops. This layout is under development. It will be available soon</string>
    <string name="str_due_date">Due Date</string>
    <string name="str_label">Label</string>

</resources>
