<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include android:id="@+id/toolbar" layout="@layout/toolbar"/>

        </android.support.design.widget.CollapsingToolbarLayout>


        <android.support.v7.widget.Toolbar
            android:id="@+id/input_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:elevation="4dp"
            app:layout_collapseMode="none"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                style="@style/ContainerLine.Vertical"
                android:padding="16dp"
                android:layout_marginBottom="16dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginBottom="16dp">

                    <EditText
                        android:id="@+id/ed_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/str_title"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp">


                    <EditText
                        android:id="@+id/ed_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/str_description"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">

        <LinearLayout
            style="@style/ContainerLine.Vertical">

            <!-- Label -->
            <LinearLayout
                android:id="@+id/lay_label"
                style="@style/ContainerLine.Horizontal"
                android:layout_marginBottom="16dp"
                android:clickable="true">

                <ImageView
                    style="@style/IconLeft_24dp"
                    app:ico_icon="cmd_tag"
                    app:ico_color="@color/colorGrayNormal"
                    app:ico_padding="2dp"/>

                <LinearLayout
                    style="@style/ContainerFull.Vertical">

                    <TextView
                        style="@style/MiniTitle"
                        android:text="@string/str_label"/>

                    <TextView
                        android:id="@+id/tv_label"
                        style="@style/Wrap_Content"
                        android:text="@string/str_regular"/>

                </LinearLayout>
            </LinearLayout>

            <!-- Date -->
            <LinearLayout
                android:id="@+id/date"
                style="@style/ContainerLine.Horizontal"
                android:clickable="true">

                <ImageView
                    style="@style/IconLeft_24dp"
                    app:ico_icon="cmd_calendar_clock"
                    app:ico_color="@color/colorGrayNormal"
                    app:ico_padding="2dp"/>

                <LinearLayout
                    style="@style/ContainerFull.Vertical">

                    <TextView
                        style="@style/MiniTitle"
                        android:text="Date"/>

                    <TextView
                        android:id="@+id/tv_date"
                        style="@style/Wrap_Content"
                        android:text="Today"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
